--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Curso Basico de POO en JS</title>
 </head>
 <body>
-    <script src="./main.js"></script>
+    <script src="./src/main.js" type="module"></script>
 </body>
 </html>
