Se vio herencia en JavaScript

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Curso Basico de POO en JS</title>
 </head>
 <body>
-    <script src="./src/main.js" type="module"></script>
+    <script src="./src/main.mjs" type="module"></script>
+    <!-- <script type="module">
+        import { PlatziClass } from "main.mjs";
+    </script> -->
 </body>
 </html>
