--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Curso Basico de POO en JS</title>
 </head>
 <body>
-    <script src="./src/main.mjs" type="module"></script>
+    <script src="./src/main.js" ></script>
     <!-- <script type="module">
         import { PlatziClass } from "main.mjs";
     </script> -->
